[package]
name = "nyt_connections"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
wasm-bindgen = "0.2.95"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3"
features = ['HtmlDivElement', 'Document', 'Element', 'Window', 'console', 'HtmlCollection']

