[package]
name = "nyt_connections"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
wasm-bindgen = "0.2.99"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
postcard = {version = "1.0.0", features=["alloc"]}
serde = {version = "1.0.214", features = ["derive"], default-features=false}
base64 = "0.22.1"
flate2 = "1.0.34"
wasm-bindgen-futures = "0.4.45"
futures = "0.3.31"
thiserror = "2.0.3"
strum = {version = "0.26.3", features = ["derive"]}
js-sys = "0.3.76"
wasm-rs-async-executor = "0.9.0"
gloo-timers = {version = "0.3.0", features = ["futures"]}
[dependencies.web-sys]
version = "0.3"
features = ['HtmlDivElement', 'Document', 'Element', 'Window', 'console', 'HtmlCollection', 'CssStyleDeclaration', 'Text', 'DomTokenList', 'EventTarget', 'HtmlInputElement', 'Url', 'Clipboard', 'Navigator', 'HtmlAnchorElement', 'HtmlDialogElement', 'UrlSearchParams', 'Location', 'HtmlSpanElement', 'HtmlBrElement', 'Animation', 'AnimationPlayState', 'HtmlTemplateElement', 'DocumentFragment']




